[gd_scene load_steps=4 format=3 uid="uid://ba4ht0yipflq2"]

[ext_resource type="PackedScene" uid="uid://pef57kr0vo1e" path="res://scenes/player.tscn" id="1_377w7"]
[ext_resource type="Script" uid="uid://ja1uvvvtey5e" path="res://scenes/levels/level.gd" id="1_b2cq8"]
[ext_resource type="PackedScene" uid="uid://cv36rfuvtkywa" path="res://scenes/levels/gate.tscn" id="3_b2cq8"]

[node name="Level" type="Node2D"]
script = ExtResource("1_b2cq8")

[node name="Gate" parent="." instance=ExtResource("3_b2cq8")]
position = Vector2(436, -519)

[node name="Player" parent="." instance=ExtResource("1_377w7")]
position = Vector2(524, 367)

[node name="Projectiles" type="Node2D" parent="."]

[connection signal="player_entered_gate" from="Gate" to="." method="_on_gate_player_entered_gate"]
[connection signal="player_exited_gate" from="Gate" to="." method="_on_gate_player_exited_gate"]
[connection signal="action_primary_triggered" from="Player" to="." method="_on_player_action_primary_triggered"]
[connection signal="action_secondary_triggered" from="Player" to="." method="_on_player_action_secondary_triggered"]
